--- a/contact.html
+++ b/contact.html
@@ -110,7 +110,7 @@
     <div class="container-fluid p-5">
         <div class="mb-5 text-center">
             <h5 class="text-primary text-uppercase">DÉJANOS LLAMARTE</h5>
-            <h1 class="display-3 text-uppercase mb-0">LOCALIANOS EN</h1>
+            <h1 class="display-3 text-uppercase mb-0">LOCALIZÁNOS EN</h1>
         </div>
         <div class="row g-5 mb-5">
             <div class="col-lg-4">
