--- a/contact.html
+++ b/contact.html
@@ -110,7 +110,7 @@
     <div class="container-fluid p-5">
         <div class="mb-5 text-center">
             <h5 class="text-primary text-uppercase">DÉJANOS LLAMARTE</h5>
-            <h1 class="display-3 text-uppercase mb-0">LOCALIZÁNOS EN</h1>
+            <h1 class="display-3 text-uppercase mb-0">LOCALÍZANOS EN</h1>
         </div>
         <div class="row g-5 mb-5">
             <div class="col-lg-4">
@@ -136,7 +136,7 @@
                     <div class="bg-primary rounded-circle d-flex align-items-center justify-content-center mb-3" style="width: 60px; height: 60px;">
                         <i class="fa fa-phone fs-4 text-white"></i>
                     </div>
-                    <h5 class="text-uppercase text-primary">Llamános</h5>
+                    <h5 class="text-uppercase text-primary">Llámanos</h5>
                     <p class="text-secondary mb-0">601 338 06 66</p>
                 </div>
             </div>
@@ -156,7 +156,7 @@
                                 <input type="text" class="form-control bg-light border-0 px-4" placeholder="¿Cuál es el asunto de tu mensaje?" style="height: 55px;">
                             </div>
                             <div class="col-12">
-                                <textarea class="form-control bg-light border-0 px-4 py-3" rows="4" placeholder="Dejános tus dudas y/o comentarios. En UCompensar estamos atentos para responderte"></textarea>
+                                <textarea class="form-control bg-light border-0 px-4 py-3" rows="4" placeholder="Déjanos tus dudas y/o comentarios. En UCompensar estamos atentos para responderte"></textarea>
                             </div>
                             <div class="col-12">
                                 <button class="btn btn-primary w-100 py-3" type="Enviar">Send Message</button>
