--- a/team.html
+++ b/team.html
@@ -259,7 +259,7 @@
             </div>
             <div class="col-lg-4">
                 <div class="py-lg-4 text-center credit">
-                    <p class="text-light mb-0">Adaptado por <a class="text-light fw-bold" href="https://htmlcodex.com">Edwin Oswaldo Torres Rincón</a></p>
+                    <p class="text-light mb-0">Adaptado por <a class="text-light fw-bold" href="https://edwinr2000.github.io/personalweb/">Edwin Oswaldo Torres Rincón</a></p>
                 </div>
             </div>
         </div>
